--- a/trabajo CV/tareaCV.html
+++ b/trabajo CV/tareaCV.html
@@ -10,18 +10,20 @@
 <body>
     <H1>VICTORIA SOSKIN</H1>
     <img src="foto vicki.jpeg" alt="vicki">
-    <h3>edad:</h3>
-    <p>32 años</p>
-    <h3>domicilio:</h3>
-    <p>Buenos Aires</p>
-    <h3>comida favorita:</h3>
-    <p>tallarines con salsa rosa</p>
-    <h3>mascota favorita:</h3>
-    <p>gato</p>
-
-    <ul>
-        <P>para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
-    </ul>
+    <h3>edad: 32 años</h3>
+    <h3>domicilio: Buenos Aires</h3>
+    <h2>que frutas me gustan:</h2>
+   <ul><li>manzana</li>
+<li>banana</li>
+<li>pera</li>
+<li>naranja</li></ul>
+<h2>que frutas son las que mas me gustan?</h2>
+<ol><li>naranja</li>
+<li>pera</li>
+<li>banana</li>
+<li>manzana</li></ol>
+<h2>perfil</h2><p>me gusta ir a la pileta, ir al cine, y salir a tomar un helado.</p>
+    <P>para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
 
 </body>
 
