--- a/trabajo CV/tareaCV.html
+++ b/trabajo CV/tareaCV.html
@@ -5,25 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURRICULUM VICTORIA SOSKIN</title>
+    <link rel="stylesheet" href="tareaCV.css">
 </head>
 
 <body>
     <H1>VICTORIA SOSKIN</H1>
-    <img src="foto vicki.jpeg" alt="vicki">
+
+    <div class="contenedor"><img src="foto vicki.jpeg" width="400" height="200" alt="vicki"></div>
+
     <h3>edad: 32 años</h3>
     <h3>domicilio: Buenos Aires</h3>
     <h2>que frutas me gustan:</h2>
-   <ul><li>manzana</li>
-<li>banana</li>
-<li>pera</li>
-<li>naranja</li></ul>
-<h2>que frutas son las que mas me gustan?</h2>
-<ol><li>naranja</li>
-<li>pera</li>
-<li>banana</li>
-<li>manzana</li></ol>
-<h2>perfil</h2><p>me gusta ir a la pileta, ir al cine, y salir a tomar un helado.</p>
-    <P>para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
+    <div class="lista">
+        <ul>
+            <li>manzana</li>
+            <li>banana</li>
+            <li>pera</li>
+            <li>naranja</li>
+        </ul>
+    </div>
+    <h2>que frutas son las que mas me gustan?</h2>
+    <div class="lista">
+        <ol>
+            <li>naranja</li>
+            <li>pera</li>
+            <li>banana</li>
+            <li>manzana</li>
+        </ol>
+    </div>
+    <h2>perfil</h2>
+    <div class="contenedor">
+        <p>me gusta ir a la pileta, ir al cine, y salir a tomar un helado.</p>
+        <P>para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
+    </div>
 
 </body>
 
