--- a/trabajo CV/tareaCV.html
+++ b/trabajo CV/tareaCV.html
@@ -5,39 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURRICULUM VICTORIA SOSKIN</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="tareaCV.css">
 </head>
 
 <body>
     <H1>VICTORIA SOSKIN</H1>
 
-    <div class="contenedor"><img src="foto vicki.jpeg" width="400" height="200" alt="vicki"></div>
+   <div class="fotovic"><img src="foto vicki.jpeg" width="500" height="300" alt="vicki"></div>
 
-    <h3>edad: 32 años</h3>
-    <h3>domicilio: Buenos Aires</h3>
-    <h2>que frutas me gustan:</h2>
-    <div class="lista">
-        <ul>
+    <h3><i class="fa-solid fa-user"></i> edad: 32 años</h3>
+    <h3><i class="fas fa-home"></i> domicilio: Buenos Aires</h3>
+    <div class="caja1"><h2>que frutas me gustan:</h2>
+ <ul>
             <li>manzana</li>
             <li>banana</li>
             <li>pera</li>
             <li>naranja</li>
-        </ul>
-    </div>
-    <h2>que frutas son las que mas me gustan?</h2>
-    <div class="lista">
-        <ol>
+        </ul></div>
+ 
+    <div class="lista"><h2>que frutas son las que mas me gustan?</h2>
+   <ol>
             <li>naranja</li>
             <li>pera</li>
             <li>banana</li>
             <li>manzana</li>
-        </ol>
-    </div>
-    <h2>perfil</h2>
-    <div class="contenedor">
-        <p>me gusta ir a la pileta, ir al cine, y salir a tomar un helado.</p>
-        <P>para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
-    </div>
+        </ol></div>
+
+    <h2><i class="fa-solid fa-face-smile"></i> perfil</h2>
+        <p><i class="fa-solid fa-heart"></i> me gusta ir a la pileta, ir al cine, y salir a tomar un helado.</p>
+        <P><i class="fa-solid fa-message"></i> para contactarme podes ingresar a este <a href="https://www.google.com/" target="_blank"> FORMULARIO</a></P>
 
 </body>
 
