--- a/programacion.modulo2/actividades-CSSparte3/tarea1.html
+++ b/programacion.modulo2/actividades-CSSparte3/tarea1.html
@@ -29,7 +29,7 @@
                 <h3>Contenido adicional</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo possimus sequi fugiat!
                     Aliquid, nulla minima? Aspernatur ut nesciunt enim ab dolore neque consequatur voluptates? Earum
-                    autem nemo at necessitatibus?</p>
+                    autem nemo at</p>
             </aside>
         </div>
         <footer>Soy el pie</footer>
