tarea sitio web

--- a/programacion.modulo3/tareaBootstrap.html
+++ b/programacion.modulo3/tareaBootstrap.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PETSHOP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="tareaBootstrap.css">
 </head>
+
+<DIV class="container-fluid"><H1>Bienvenidos a Nuestro PETSHOP</H1>
+    <img src="petshop.png" class="img-fluid" alt="PETSHOP">
+</DIV>
 <div class="conteiner fluid">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark border-bottom border-body "data-bs-theme="dark" >
         <div class="container-fluid">
@@ -51,12 +55,10 @@
                 </form>
             </div>
         </div>
+        
     </nav>
 
-
 </div>
-
-<DIV class="container-fluid"><H1>Bienvenidos a Nuestro PETSHOP <img src="petshop.png" class="img-fluid" alt="PETSHOP"></H1></DIV>
 
 <div class="container">
     <div class="accordion" id="accordionPanelsStayOpenExample">
