tarea sitio web

--- a/programacion.modulo4/transportes/nosotros.html
+++ b/programacion.modulo4/transportes/nosotros.html
@@ -75,7 +75,7 @@
                         autem ratione suscipit eligendi velit dolorum dolores nulla minima dolor, reiciendis, quia ab
                         animi cupiditate unde. Iste.</p>
 
-                </div>
+                </div>|
                 <div class="persona">
                     <img src="img/nosotros/nosotros5.jpg" alt="Juan Gomez">
                     <h5>Juan Gomez</h5>
