--- a/tarea sitio web/index.html
+++ b/tarea sitio web/index.html
@@ -16,8 +16,9 @@
         crossorigin="anonymous"></script>
 
     <header>
-        <div class="logo">
-        <img src="fotos/logo.png" width="100" alt="logo">
+        <div class="container-fluid">
+            <div class="logo">
+                <img src="fotos/logo.png" width="100" alt="logo">
                 <nav class="navbar bg-body-tertiary">
                     <div class="container-fluid">
                         <form class="d-flex" role="search">
@@ -26,65 +27,120 @@
                         </form>
                     </div>
                 </nav>
+            </div>
         </div>
 
     </header>
+    <div class="container">
 
-    <nav>
-        <ul class="holder">
-            <li><a class="activo" href="index.html">Home</a></li>
-            <li><a href="perros.html">Perros</a></li>
-            <li><a href="gatos.html">Gatos</a></li>
-            <li><a href="promociones.html">Promociones</a></li>
-            <li><a href="marcas.html">Marcas</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="holder">
+                <li><a class="activo" href="index.html">Home</a></li>
+                <li><a href="perros.html">Perros</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a href="promociones.html">Promociones</a></li>
+                <li><a href="marcas.html">Marcas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
 
-    <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+        <main>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="fotos/imagen1.webp" class="d-block w-100" alt="img1">
+                        <div class="carousel-caption d-none d-md-block">
+
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="fotos/imagen2.webp" class="d-block w-100" alt="img2">
+                        <div class="carousel-caption d-none d-md-block">
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="fotos/imagen3.webp" class="d-block w-100" alt="imagen3">
+                        <div class="carousel-caption d-none d-md-block">
+
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="fotos/imagen1.webp" class="d-block w-100" alt="img1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="fotos/imagen2.webp" class="d-block w-100" alt="img2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="fotos/imagen3.webp" class="d-block w-100" alt="imagen3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <h5>Envío gratis en CABA y GBA*</h5>
+                <p>desde $33000</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="col">
+                <h5>Retirá gratis</h5>
+                <p>en cualquiera de nuestras sucursales</p>
+            </div>
+            <div class="col">
+                <h5>Recibí en el día en CABA y GBA*</h5>
+                <p>comprando de lunes a viernes hasta las 12hs</p>
+            </div>
+            <div class="col">
+                <h5>Envíos a todo el país</h5>
+                <p>Bonificados hasta 100% según zona y monto de compra</p>
+            </div>
         </div>
+    </div>
+
+
+<div class="container-fluid">
+<div class="registrate">
+        <h4>REGISTRATE PARA RECIBIR OFERTAS EXCLUSIVAS</h4>
+        <form class="row g-3">
+  <div class="col-md-4">
+    <label for="validationDefault01" class="form-label">Nombre</label>
+    <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+  </div>
+  <div class="col-md-4">
+    <label for="validationDefault02" class="form-label">Apellido</label>
+    <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+      <label class="form-check-label" for="invalidCheck2">
+        Acepto terminos y condiciones
+      </label>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Enviar</button>
+  </div>
+</form>
+
+    </div>
+
+
+
+</div>
+
+
+
     </main>
 
     <footer>
