tarea sitio web

--- a/tarea sitio web/promociones.html
+++ b/tarea sitio web/promociones.html
@@ -38,53 +38,24 @@
             <ul class="holder">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="perros.html">Perros</a></li>
-                <li><a class="activo" href="gatos.html">Gatos</a></li>
-                <li><a href="promociones.html">Promociones</a></li>
+                <li><a href="gatos.html">Gatos</a></li>
+                <li><a class="activo" href="promociones.html">Promociones</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                
             </ul>
         </nav>
        
 
  <main class="holder">
-            <h2>Alimentos</h2>
-            <div class="gatosalimentos">
-                <div class="gato">
-                    <img src="fotos/gato1.webp" alt="gato">
-                    <H5><a href="BALANCED">BALANCED</a></H5>
-                    <h6>GATO ADULTO</h6>
-                    <p>$59.875</p>
-                </div>
-                     <div class="gato">
-                    <img src="fotos/gato2.jpg" alt="gato">
-                    <h5><a href="PURINA">PURINA</a></h5>
-                    <h6>SENSIVITE</h6>
-                    <p>$43.237</p>
-                </div>
-                     <div class="gato">
-                    <img src="fotos/gato3.jpg" alt="gato">
-                    <h5><a href="OLD PRINCE">OLD PRINCE</a></h5>
-                    <h6>ADULTOS</h6>
-                    <p>$75.498</p>
-                </div>
-                     <div class="gato">
-                    <img src="fotos/gato4.webp" alt="gato">
-                    <h5><a href="WHISKAS">WHISCAS</a></h5>
-                    <h6>SABOR CARNE</h6>
-                    <p>$40.645</p>
-                </div>
-                     <div class="gato">
-                    <img src="fotos/gato5.webp" alt="gato">
-                    <h5><a href="ROYAL CANIN">ROYAL CANIN</a></h5>
-                    <h6>CUIDADO DIGESTIVO</h6>
-                    <p>$42.399</p>
-                </div>
-                     <div class="gato">
-                    <img src="fotos/gqato6.jpg" alt="gato">
-                   <h5> <a href="ROYAL CANIN">ROYAL CANIN</a></h5>
-                    <h6>KITTEN</h6>
-                    <p>$49.554</p>
-                </div>
-                 </div>
+            <h2>promociones</h2>
+              <section class="promociones">
+        <img src="fotos/promo1.webp" alt="">
+        <img src="fotos/promo2.webp" alt="">
+        <img src="fotos/promo3.webp" alt="">
+        <img src="fotos/promo4.webp" alt="">
+        <img src="fotos/promo5.webp" alt="">
+        <img src="fotos/promo6.webp" alt="">
+       </section>
 </main>
 
 
